--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -5,6 +5,7 @@ import postImport from "post:import";
 
 import "src/styles/post.css";
 import PostMeta from "src/components/PostMeta.astro";
+import Toc from "~/components/Toc.astro";
 
 export async function getStaticPaths() {
   return Object.values(postInfo).map(({ slug }) => ({ params: { slug } }));
@@ -29,16 +30,7 @@ const { default: Content, excerpt, metadata: meta, toc } = await postImport[slug
     <PostMeta meta={meta} />
   </Fragment>
   <main id="md" lang={meta.lang ?? "zh-Hans"}>
-    { toc ? (
-      <section id="toc-container">
-        <aside id="toc">
-          <a id="toc-to-top" href="#"><div class="i-mdi-arrow-up-circle"></div></a>
-          {toc.map(([heading, id]) => (
-            <span class="font-bold"><a href={`#${id}`}>{heading}</a></span>
-          ))}
-        </aside>
-      </section>
-      ) : null }
+    { toc ? <Toc {toc} /> : null }
     <Content>
       <Fragment slot="foldout">
         <!-- <p class="my-4">Hi! from foldout.</p> -->
@@ -46,57 +38,3 @@ const { default: Content, excerpt, metadata: meta, toc } = await postImport[slug
     </Content>
   </main>
 </LayoutDefault>
-
-<style>
-  #toc-container {
-    @apply relative lg:(sticky top-6) w-full ;
-  }
-  #toc {
-    @apply
-      flex flex-col w-full items-start
-      overflow-y-auto
-      lg:(
-        absolute left-full ml-4 w-fit
-      )
-    ;
-    gap: 0.25rem 0;
-    max-height: 25vh;
-    max-height: 25dvh;
-  }
-
-  @media (min-width: 1024px) {
-    #toc {
-      min-width: max-content;
-      max-width: calc(calc(calc(100vw - 100%) / 2) - 2.5rem);
-      max-width: calc(calc(calc(100dvw - 100%) / 2) - 2.5rem);
-      max-height: 50vh;
-      max-height: 50dvh;
-    }
-  }
-
-  #toc a {
-    border: none !important;
-    padding: unset;
-  }
-
-  #toc-to-top {
-    @apply lt-lg:hidden;
-  }
-
-</style>
-
-<!-- max-h-[50vh]
-        w-[calc(calc(calc(100vw-100%)/2)-2rem)]
-        overflow-y -->
-
-<!-- @media (min-width: 1024px) {
-  #toc {
-    position: absolute;
-    left: 100%;
-    padding: 0 .5em;
-    width: calc(calc(calc(100vw - 100%) / 2) - 2em);
-    margin-left: 1em;
-    max-height: 50vh;
-    overflow-y: auto;
-  }
-} -->
