--- a/src/components/CommentButton.astro
+++ b/src/components/CommentButton.astro
@@ -21,6 +21,7 @@ import Storage from "src/components/Storage.svelte";
   </Fragment>
   <Fragment slot="handle">
     <button
+      title="Comments"
       onclick="this.dispatchEvent(new Event('component-storage:toggle',{bubbles:true}))"
     ><div class="i-mdi-comment"></div></button>
   </Fragment>
