--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -14,7 +14,7 @@ const { meta } = Astro.props;
   class="py-0.5 flex flex-row flex-wrap items-baseline"
   style="gap: 0.25rem 0.5rem;"
 >
-  <div class="self-center">
+  <div class="self-start">
     <IconGenre genre={meta.genre} />
   </div>
   <div class="inline-chip">
