--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -6,6 +6,8 @@ import postImport from "post:import";
 import "src/styles/post.css";
 import PostMeta from "src/components/PostMeta.astro";
 import Toc from "~/components/Toc.astro";
+import CalloutStatus from "~/components/CalloutStatus.astro";
+import { Status } from "~/logic/status";
 
 export async function getStaticPaths() {
   return Object.values(postInfo).map(({ slug }) => ({ params: { slug } }));
@@ -33,6 +35,7 @@ const { default: Content, excerpt, metadata: meta, toc } = await postImport[slug
     { toc ? <Toc {toc} /> : null }
     <Content>
       <Fragment slot="foldout">
+        { meta.status != Status.FINISHED ? <CalloutStatus status={meta.status} updated={meta.timeline.updated} /> : null }
         <!-- <p class="my-4">Hi! from foldout.</p> -->
       </Fragment>
     </Content>
