--- a/src/components/PostInfoBrief.astro
+++ b/src/components/PostInfoBrief.astro
@@ -1,6 +1,7 @@
 ---
 import { lightFormat } from "date-fns";
 import { decideTimeFromStatus } from "src/utils/time";
+import { Status, STATUS_META } from "~/logic/status";
 
 export interface Props {
   info: post.PostInfo
@@ -22,9 +23,11 @@ const {
     <span>{meta.taxonomy.category}</span>
   </a>
   <a
-    class="@hover-text-one-front transition-lively"
+    class="inline-flex gap-1 @hover-text-one-front transition-lively"
     href={new URL(`${import.meta.env.BASE_URL}post/${slug}`, Astro.site)}
+    style={meta.status === Status.OUTDATED ? "text-decoration-line: line-through;" : ""}
   >
     <span class="ub">{meta.title}</span>
+    { meta.status !== Status.FINISHED ? <span class="text-sm"><div class={STATUS_META[meta.status].icon}></div></span> : null }
   </a>
 </article>
