feat: modify genre::note icon

--- a/src/components/IconGenre.astro
+++ b/src/components/IconGenre.astro
@@ -16,7 +16,7 @@ switch (genre) {
     className = "i-mdi-table-large";
     break;
   case "note":
-    className = "i-mdi-folder";
+    className = "i-mdi-clipboard-text";
     break;
   default:
     className = "i-mdi-file";
