--- a/src/components/BuildInfo.astro
+++ b/src/components/BuildInfo.astro
@@ -10,15 +10,15 @@ const { version, buildTimestamp } = siteMeta;
   >
   <Fragment slot="content">
     <div
-      class="px-1.5 py-1 flex flex-col gap-0.5 rounded bg-one-back text-one-front font-mono"
+      class="px-1.5 py-1 flex flex-col gap-0.5 rounded bg-front text-back font-mono"
     >
-      <span class="text-sm">v{version}</span>
+      <span class="text-sm font-bold">v{version}</span>
       <span class="inline-flex items-center gap-0.5 text-xs">
         <span>{
           import.meta.env.PUBLIC_BUILT_BY !== "manual" ? (
-            <div class="i-mdi-robot" style="height:0.75rem;width:0.75rem;" />
+            <div class="i-mdi-robot" />
           ) : (
-            <div class="i-mdi-face-man" style="height:0.75rem;width:0.75rem;" />
+            <div class="i-mdi-face-man" />
           )
         }</span>
         <span>{buildTimestamp}</span>
