refactor: migrate gap to atomic css

--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -11,8 +11,7 @@ const { meta } = Astro.props;
 ---
 
 <div
-  class="py-0.5 flex flex-row flex-wrap items-baseline"
-  style="gap: 0.25rem 0.5rem;"
+  class="py-0.5 flex flex-row flex-wrap items-baseline gap-y-1 gap-x-2"
 >
   <div class="self-start">
     <IconGenre genre={meta.genre} />
