--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -27,11 +27,11 @@ const { toc } = Astro.props;
     @apply
       flex flex-col w-full items-start
       overflow-y-auto
+      gap-y-1
       lg:(
         absolute left-full ml-4 w-fit
       )
     ;
-    gap: 0.25rem 0;
     max-height: 25vh;
     max-height: 25dvh;
   }
