--- a/src/components/HoverPop.astro
+++ b/src/components/HoverPop.astro
@@ -1,8 +1,8 @@
 ---
 
 export interface Props {
-  id?: string;
-  style?: string;
+  id?: string
+  style?: string
 }
 
 const { id, style } = Astro.props;
