--- a/src/components/PostInfoFull.astro
+++ b/src/components/PostInfoFull.astro
@@ -1,6 +1,6 @@
 ---
 import PostMeta from "./PostMeta.astro";
-import { Status, STATUS_META } from "~/logic/status";
+import { STATUS_META, Status } from "~/logic/status";
 
 export interface Props {
   info: post.PostInfo
