--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -6,8 +6,8 @@
   </nav>
   <div class="flex-1"></div>
   <nav class="gap-3">
-    <a title="Archive" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
-      <div class="i-mdi-archive"></div>
+    <a title="Taxonomy" href={new URL(`${import.meta.env.BASE_URL}taxonomy`, Astro.site)}>
+      <div class="i-mdi-checkbox-blank"></div>
     </a>
     <!-- <button title="Posts">
       <div class="i-mdi-file"></div>
