--- a/src/components/ColorPalette.astro
+++ b/src/components/ColorPalette.astro
@@ -1,6 +1,6 @@
 ---
 import ColorPaletteButton from "src/components/ColorPaletteButton.svelte";
-import Hover from "src/components/Hover.astro";
+import BaseHover from "src/components/BaseHover.astro";
 import type { ColorPaletteSetting } from "src/logic/color-palette";
 import DEFAULT_COLOR_PALETTE from "src/logic/color-palette-default.json";
 
@@ -109,7 +109,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
 <div class="px-2 py-1 flex flex-row gap-2 items-center">
   {
     prebuiltColorPalettes.map((color, index) => (
-      <Hover>
+      <BaseHover>
         <ColorPaletteButton
           slot="handle"
           client:idle
@@ -122,7 +122,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
         >
           <span>{color.name}</span>
         </div>
-      </HoverPop>
+      </BaseHover>
     ))
   }
 </div>
