--- a/src/components/TheFooterCommentButton.astro
+++ b/src/components/TheFooterCommentButton.astro
@@ -1,9 +1,9 @@
 ---
-import Comment from "src/components/Comment.svelte";
-import Storage from "src/components/Storage.svelte";
+import TheComment from "src/components/TheComment.svelte";
+import BaseStorage from "src/components/BaseStorage.svelte";
 ---
 
-<Storage client:idle targetSelector="#the-bottom-sheet" filled={true}>
+<BaseStorage client:idle targetSelector="#the-bottom-sheet" filled={true}>
   <Fragment slot="storage">
     <section
       class="md:mx-3 p-4 rounded-t relative flex flex-col gap-3 text-[#F5F5F5] bg-[#222222] h-[50vh] overflow-y-auto overflow-y-overlay"
@@ -16,7 +16,7 @@ import Storage from "src/components/Storage.svelte";
         class="absolute top-4 right-3"
         onclick="this.dispatchEvent(new Event('component-storage:push',{bubbles:true}))"
       ><div class="i-mdi-close"></div></button>
-      <Comment client:visible />
+      <TheComment client:visible />
     </section>
   </Fragment>
   <Fragment slot="handle">
@@ -25,4 +25,4 @@ import Storage from "src/components/Storage.svelte";
       onclick="this.dispatchEvent(new Event('component-storage:toggle',{bubbles:true}))"
     ><div class="i-mdi-comment"></div></button>
   </Fragment>
-</Storage>
+</BaseStorage>
