feat: use color words for prebuilt palettes

--- a/src/components/ColorPalette.astro
+++ b/src/components/ColorPalette.astro
@@ -10,7 +10,7 @@ interface PrebuildColorPalette extends ColorPaletteSetting {
 
 const prebuiltColorPalettes: PrebuildColorPalette[] = [
   {
-    name: "Passion",
+    name: "Red",
     one: {
       mode: "oklch",
       l: 0.5766,
@@ -25,7 +25,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
   },
   {
-    name: "Courage",
+    name: "Orange",
     one: {
       mode: "oklch",
       l: 0.6926,
@@ -40,7 +40,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
   },
   {
-    name: "Joy",
+    name: "Yellow",
     one: {
       mode: "oklch",
       l: 0.8222,
@@ -55,7 +55,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
   },
   {
-    name: "Renewal",
+    name: "Green",
     one: {
       mode: "oklch",
       l: 0.5676,
@@ -70,7 +70,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
   },
   {
-    name: "Tranquility",
+    name: "Cyan",
     one: {
       mode: "oklch",
       l: 0.6967,
@@ -85,11 +85,11 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
   },
   {
-    name: "Wisdom",
+    name: "Blue",
     ...DEFAULT_COLOR_PALETTE as ColorPaletteSetting,
   },
   {
-    name: "Creativity",
+    name: "Purple",
     one: {
       mode: "oklch",
       l: 0.6138,
