refactor: move runtime color store to stores dir

--- a/src/components/ColorPalette.astro
+++ b/src/components/ColorPalette.astro
@@ -1,7 +1,7 @@
 ---
 import ColorPaletteButton from "src/components/ColorPaletteButton.svelte";
 import BaseHover from "src/components/BaseHover.astro";
-import type { ColorPaletteSetting } from "src/logic/color-palette";
+import type { ColorPaletteSetting } from "src/stores/color-palette";
 import { polyfillOklch, calcColorFunctions } from "src/logic/color";
 import { DEFAULT_COLOR_PALETTE } from "src/logic/color-palette-default";
 
