--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,7 +70,7 @@ body.cloak {
 
 :root {
   --font-sans: "Inter", "Noto Sans CJK SC", "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Avenir Next", "Helvetica Neue", sans-serif;
-  --font-serif: "Source Serif Pro", "Noto Serif CJK SC", "New York", "Roboto Slab", Cambria, Georgia, Times, "Times New Roman", serif;
+  --font-serif: "Source Serif 4", "Noto Serif CJK SC", "New York", "Roboto Slab", Cambria, Georgia, Times, "Times New Roman", serif;
   --font-mono: "JetBrains Mono", "Noto Sans CJK SC", DengXian, "SF Mono", "Droid Sans Mono", Menlo, "Cascadia Code", Consolas, Courier, "Courier New", monospace;
 }
 
