feat: reorganize links

--- a/src/pages/tags.astro
+++ b/src/pages/tags.astro
@@ -8,8 +8,8 @@ import TagList from "~/components/TagList.astro";
 ---
 
 <LayoutDefault
-  title="Category"
-  description="Categories on Yixuan Wang's blog."
+  title="Tags"
+  description="Tags on Yixuan Wang's blog."
   noComments={true}
 >
   <div class="flex flex-col gap-8">
