--- a/src/pages/taxonomy.astro
+++ b/src/pages/taxonomy.astro
@@ -14,12 +14,6 @@ interface Taxonomy {
 
 const taxonomies: Taxonomy[] = [
   {
-    title: "Archive",
-    icon: "i-mdi-archive",
-    path: "archive",
-    level: 0,
-  },
-  {
     title: "Category",
     icon: "i-mdi-google-circles",
     path: "category",
@@ -69,7 +63,7 @@ const taxonomies: Taxonomy[] = [
   {
     title: "...More Tags",
     icon: "i-mdi-tag",
-    path: "category",
+    path: "tags",
     level: 1,
   },
 ];
