--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -5,13 +5,19 @@
     >
   </nav>
   <div class="flex-1"></div>
-  <nav class="gap-3">
-    <a title="Taxonomy" href={new URL(`${import.meta.env.BASE_URL}taxonomy`, Astro.site)}>
-      <div class="i-mdi-checkbox-blank"></div>
+  <nav class="gap-2">
+    <a title="Archive" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
+      <div class="i-mdi-inbox"></div>
     </a>
-    <!-- <button title="Posts">
-      <div class="i-mdi-file"></div>
-    </button> -->
+    <a title="Tags" href={new URL(`${import.meta.env.BASE_URL}tags`, Astro.site)}>
+      <div class="i-mdi-drawing-box"></div>
+    </a>
+    <a title="Friends" href={new URL(`${import.meta.env.BASE_URL}friends`, Astro.site)}>
+      <div class="i-mdi-account-box"></div>
+    </a>
+    <!-- <a title="About">
+      <div class="i-mdi-information-box"></div>
+    </a> -->
   </nav>
 </header>
 
