--- a/src/components/PostInfoFull.astro
+++ b/src/components/PostInfoFull.astro
@@ -13,7 +13,7 @@ const {
 
 <article class="card flex flex-col gap-1 @hover-bg-one-back transition-lively">
   <h2 class="inline-flex gap-1 text-2xl font-bold @hover-text-one-front transition-lively">
-    <a class="ub" href={new URL(`${import.meta.env.BASE_URL}post/${slug}`, Astro.site)}>{meta.title}</a>
+    <a href={new URL(`${import.meta.env.BASE_URL}post/${slug}`, Astro.site)}>{meta.title}</a>
     { meta.status !== Status.FINISHED ? <span class="text-sm"><div class={STATUS_META[meta.status].icon}></div></span> : null }
   </h2>
   <p>{excerpt}</p>
