--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,12 @@ import FriendList from "src/components/FriendList.astro";
   <section class="flex flex-col gap-3">
     <h2 class="text-2xl font-bold text-one-front">Recent Posts</h2>
     {timeDesc.slice(0, 10).map(key => <PostInfoFull info={PostInfo[key]} />)}
+    <article class="card flex flex-row gap-2 items-center @hover-bg-one-back transition-lively">
+      <div class="i-mdi-inbox" />
+      <h2 class="font-bold @hover-text-one-front transition-lively">
+        <a href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>Archive</a>
+      </h2>
+    </article>
   </section>
 
   <section class="flex flex-col gap-3">
