--- a/src/styles/post-typeface.css
+++ b/src/styles/post-typeface.css
@@ -5,10 +5,14 @@
 #md h5,
 #md h6,
 #md hr {
-  font-family: var(--font-serif);
+  font-family: var(--font-post-heading);
 }
 
 #md {
+  font-family: var(--font-post-content);
+}
+
+#md aside {
   font-family: var(--font-sans);
 }
 
