--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,4 +46,7 @@ import FriendList from "src/components/FriendList.astro";
     flex-direction: column;
     gap: 2rem;
   }
+  #the-main .friends-list .tip {
+    @apply bg-one-front text-one-back;
+  }
 </style>
