--- a/src/components/BaseHoverPinnable.astro
+++ b/src/components/BaseHoverPinnable.astro
@@ -8,15 +8,15 @@ export interface Props {
 const { id, style } = Astro.props;
 
 const onmouseenter = `if(window.matchMedia("(pointer: fine)").matches) {
-  this.querySelector('.hoverpop-content').style.display='block';
+  this.querySelector('.hover-component-content').style.display='block';
 }`;
 
 const onmouseleave = `if(window.matchMedia("(pointer: fine)").matches) {
-  const content = this.querySelector('.hoverpop-content');
+  const content = this.querySelector('.hover-component-content');
   if (!content.getAttribute("pinned")) content.style.display='none';
 }`;
 
-const onclick = `const content = this.parentElement.querySelector('.hoverpop-content');
+const onclick = `const content = this.parentElement.querySelector('.hover-component-content');
 if (content.getAttribute("pinned")) {
   content.attributes.removeNamedItem("pinned")
   content.style.display='none';
@@ -26,27 +26,27 @@ if (content.getAttribute("pinned")) {
 }`;
 ---
 
-<div {id} class="hoverpop-container" {style} {onmouseenter} {onmouseleave}>
-  <div class="hoverpop-handle" {onclick}>
+<div {id} class="hover-component-container" {style} {onmouseenter} {onmouseleave}>
+  <div class="hover-component-handle" {onclick}>
     <slot name="handle"></slot>
   </div>
-  <div class="hoverpop-content">
+  <div class="hover-component-content">
     <slot name="content"></slot>
   </div>
 </div>
 
 <style>
-.hoverpop-container {
+.hover-component-container {
   position: relative;
   display: inline-flex;
   justify-content: center;
 }
 
-.hoverpop-handle {
+.hover-component-handle {
   display: contents;
 }
 
-.hoverpop-content {
+.hover-component-content {
   position: absolute;
   display: none;
   width: max-content;
