--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -1,23 +1,40 @@
+---
+import BaseHover from "./BaseHover.astro";
+
+---
+
 <header id="the-header">
-  <nav>
+  <nav id="the-header-start">
     <a href={new URL(import.meta.env.BASE_URL, Astro.site)} title="Home"
       ><div class="i-mdi-circle"></div></a
     >
   </nav>
   <div class="flex-1"></div>
-  <nav class="gap-2">
-    <a title="Archive" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
-      <div class="i-mdi-inbox"></div>
-    </a>
-    <a title="Tags" href={new URL(`${import.meta.env.BASE_URL}tags`, Astro.site)}>
-      <div class="i-mdi-drawing-box"></div>
-    </a>
-    <a title="Friends" href={new URL(`${import.meta.env.BASE_URL}friends`, Astro.site)}>
-      <div class="i-mdi-account-box"></div>
-    </a>
-    <!-- <a title="About">
-      <div class="i-mdi-information-box"></div>
-    </a> -->
+  <nav id="the-header-end" class="gap-2">
+    <BaseHover>
+      <a slot="handle" title="Archive" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
+        <div class="i-mdi-inbox"></div>
+      </a>
+      <div slot="content" class="tip">Archive</div>
+    </BaseHover>
+    <BaseHover>
+      <a slot="handle" title="Tags" href={new URL(`${import.meta.env.BASE_URL}tags`, Astro.site)}>
+        <div class="i-mdi-drawing-box"></div>
+      </a>
+      <div slot="content" class="tip">Tags</div>
+    </BaseHover>
+    <BaseHover>
+      <a slot="handle" title="Friends" href={new URL(`${import.meta.env.BASE_URL}friends`, Astro.site)}>
+        <div class="i-mdi-account-box"></div>
+      </a>
+      <div slot="content" class="tip">Friends</div>
+    </BaseHover>
+    <BaseHover>
+      <a slot="handle" title="Lab" href={new URL(`${import.meta.env.BASE_URL}lab`, Astro.site)}>
+        <div class="i-mdi-developer-board"></div>
+      </a>
+      <div slot="content" class="tip">Lab</div>
+    </BaseHover>
   </nav>
 </header>
 
@@ -26,5 +43,13 @@
   #the-header nav button {
     @apply text-lg
       text-one @hover-text-one-front active:text-one-front transition-lively;
+  }
+
+  #the-header-end .hover-component-container {
+    @apply justify-end lg:justify-center;
+  }
+
+  #the-header-end .hover-component-content {
+    @apply top-[calc(100%+0.25rem)] bottom-unset;
   }
 </style>
