--- a/src/pages/lab/index.astro
+++ b/src/pages/lab/index.astro
@@ -15,6 +15,6 @@ import LayoutDefault from "src/layouts/LayoutDefault.astro";
 
 <style>
   a {
-    @apply px-2 py-1 rounded text-one transition-lively @hover-text-two @hover-bg-two-back;
+    @apply px-2 py-1 rounded transition-lively @hover-text-one-front @hover-bg-one-back;
   }
 </style>
