--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import FriendList from "src/components/FriendList.astro";
   <header class="flex flex-col">
     <h1 class="text-6xl font-bold text-one">Pak</h1>
     <p class="text-3xl font-bold mb-3 text-one-front">Yixuan Wang's Blog</p>
-    <p class="text-xl font-mono">|_| todo!()</p>
+    <p class="text-xl font-mono"><span>|</span><span class="text-one-front">_</span><span>|</span><span>&nbsp;</span><span class="text-one">todo!</span><span>()</span></p>
   </header>
 
   <section class="flex flex-col gap-3">
