--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -1,6 +1,33 @@
 ---
 import BaseHover from "./BaseHover.astro";
 
+interface HeaderItem {
+  title: string;
+  icon: string;
+  url: string;
+}
+const headerItems: HeaderItem[] = [
+  {
+    title: "Archive",
+    icon: "i-mdi-inbox",
+    url: "archive",
+  },
+  {
+    title: "Tags",
+    icon: "i-mdi-drawing-box",
+    url: "tags",
+  },
+  {
+    title: "Friends",
+    icon: "i-mdi-account-box",
+    url: "friends",
+  },
+  {
+    title: "Lab",
+    icon: "i-mdi-developer-board",
+    url: "lab",
+  },
+];
 ---
 
 <header id="the-header">
@@ -11,30 +38,22 @@ import BaseHover from "./BaseHover.astro";
   </nav>
   <div class="flex-1"></div>
   <nav id="the-header-end" class="gap-2">
-    <BaseHover>
-      <a slot="handle" title="Archive" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
-        <div class="i-mdi-inbox"></div>
-      </a>
-      <div slot="content" class="tip">Archive</div>
-    </BaseHover>
-    <BaseHover>
-      <a slot="handle" title="Tags" href={new URL(`${import.meta.env.BASE_URL}tags`, Astro.site)}>
-        <div class="i-mdi-drawing-box"></div>
-      </a>
-      <div slot="content" class="tip">Tags</div>
-    </BaseHover>
-    <BaseHover>
-      <a slot="handle" title="Friends" href={new URL(`${import.meta.env.BASE_URL}friends`, Astro.site)}>
-        <div class="i-mdi-account-box"></div>
-      </a>
-      <div slot="content" class="tip">Friends</div>
-    </BaseHover>
-    <BaseHover>
-      <a slot="handle" title="Lab" href={new URL(`${import.meta.env.BASE_URL}lab`, Astro.site)}>
-        <div class="i-mdi-developer-board"></div>
-      </a>
-      <div slot="content" class="tip">Lab</div>
-    </BaseHover>
+    {
+      headerItems.map(({ url, title, icon }) => (
+        <BaseHover>
+          <a
+            slot="handle"
+            title={title}
+            href={new URL(`${import.meta.env.BASE_URL}${url}`, Astro.site)}
+          >
+            <div class={icon} />
+          </a>
+          <div slot="content" class="tip">
+            {title}
+          </div>
+        </BaseHover>
+      ))
+    }
   </nav>
 </header>
 
