--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@ html {
   width: 100%;
 
   margin: 0;
-  padding: 0 1em;
+  padding: 0;
 
   overflow-x: hidden;
   overflow-y: auto;
@@ -16,6 +16,9 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0 1em;
+
   min-height: 100vh;
   min-height: -webkit-fill-available;
   min-height: 100dvh;
@@ -83,6 +86,7 @@ body.cloak {
   --color-two: var(--cd, var(--color-muted));
   --color-two-front: var(--ce, var(--color-front));
   --color-two-back: var(--cf, var(--color-back));
+  --color-blend-intensity: 5%;
 }
 
 :root.dark {
@@ -92,10 +96,11 @@ body.cloak {
   --color-two: var(--cd, var(--color-muted));
   --color-two-front: var(--ce, var(--color-front));
   --color-two-back: var(--cf, var(--color-back));
+  --color-blend-intensity: 15%;
 }
 
 html {
-  background-color: rgb(var(--color-back), 100%);
+  background: color-mix(in oklab, rgb(var(--color-back)), rgb(var(--color-one)) var(--color-blend-intensity));
   color: rgb(var(--color-front), 100%);
 }
 
